--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "termux-whatsapp-bot",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "whatsapp bot",
   "main": "index.js",
   "directories": {
@@ -27,15 +27,12 @@
     "escape-string-regexp": "^4.0.0",
     "fake-useragent": "^1.0.1",
     "fluent-ffmpeg": "^2.1.2",
-    "got": "^11.8.1",
-    "imgbb-uploader": "^1.3.0",
-    "marker": "^0.1.2",
     "moment-timezone": "^0.5.32",
     "multistream": "^4.0.1",
     "node-fetch": "^2.6.1",
     "remove.bg": "^1.3.0",
     "request": "^2.81.0",
-    "spinnies": "^0.5.1",
+    "spinnies": "^0.5.1"
   },
   "devDependencies": {},
   "repository": {
